--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -69,7 +69,7 @@
                                 <span class="md md-delete"></span>
                             </button>
                             <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)" data-toggle="tooltip" data-placement="bottom"
-                                title="Agregar recepciones">
+                                title="Agregar folio de recepcion">
                                 <span class="md md-assignment"></span>
                             </button>
                             <button ng-show="grill.Sampling == null" class="btn btn-icon command-edit" ng-click="redirectAddSampling(grill.Id)" data-toggle="tooltip"
