--- a/app/views/humidity/humidityAddToCylinder.html
+++ b/app/views/humidity/humidityAddToCylinder.html
@@ -1,6 +1,6 @@
 <div class="animated bounceInRight">
     <div class="card">
-        <form name="humidityForm" class="form-horizontal" role="form">
+        <form name="humidityForm" class="form-horizontal" role="form" novalidate>
             <div class="card-header">
                 <h2>Captura de Humedad</h2>
             </div>
