--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -9,14 +9,15 @@
                     <label for="iusername" class="col-sm-2 control-label">Nombre *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input name="cylinderName" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre del cilindro" ng-maxlength="20" ng-model="cylinder.CylinderName" required>
+                            <input name="cylinderName" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre del cilindro" ng-maxlength="20"
+                                ng-model="cylinder.CylinderName" required>
                             <small class="help-block has-error" style="color:red" ng-show="cylinderForm.cylinderName.$error.maxlength">El nombre del cilindro es demasiado extenso, debe contener menos de 20 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveCylinder()" ng-disabled="!Cilindros.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveCylinder()" ng-disabled="!cylinderForm.$valid">Guardar</button>
                     </div>
                 </div>
             </div>
@@ -40,8 +41,9 @@
             <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
-                        <th data-column-id="id">Cilindro</th>
-                        <th data-column-id="commands">Opciones</th>
+                        <th>Cilindro</th>
+                        <th>Opciones</th>
+                        <th>Disponibilidad</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -49,8 +51,14 @@
                         <td>{{cylinder.CylinderName}}</td>
                         <td>
                             <button class="btn btn-icon command-delete" ng-click="confirmationDelete(cylinder.Id)">
-                        <span class="md md-delete"></span>
-                    </button>
+                                <span class="md md-delete"></span>
+                            </button>
+                        </td>
+                        <td>
+                            <div class="toggle-switch">
+                                <input id="{{cylinder.Id}}" type="checkbox" hidden="hidden" ng-model="cylinder.State" ng-change="changeState(cylinder.Id, cylinder.State)">
+                                <label for="{{cylinder.Id}}" class="ts-helper"></label>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
