--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -16,6 +16,7 @@
             <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
+                        <th>Cilindro</th>
                         <th>Recepciones (Folios)</th>
                         <th>Fecha de Captura</th>
                         <th>Variedad</th>
@@ -25,6 +26,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="receptionEntry in humiditiesInReceptionEntry | filter:searchUser">
+                        <td>{{receptionEntry.Cylinder}}</td>
                         <td>{{receptionEntry.Receptions}}</td>
                         <td>{{receptionEntry.DateEntry | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{receptionEntry.Variety}}</td>
