--- a/app/views/remission/remissionUpdate.html
+++ b/app/views/remission/remissionUpdate.html
@@ -6,28 +6,6 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="cultivation" class="col-sm-2 control-label">Cultivo *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required type="text" name="Cultivation" class="form-control input-sm" id="cultivation" placeholder="cultivo" ng-minlength="3"
-                                ng-maxlength="150" data-ng-model="remission.Cultivation">
-                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Cultivation.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Cultivation.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required type="text" name="Batch" class="form-control input-sm" id="batch" placeholder="huerta o lote" ng-minlength="3"
-                                ng-maxlength="150" data-ng-model="remission.Batch">
-                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Batch.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Batch.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
                     <label for="quantity" class="col-sm-2 control-label">Cantidad *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
@@ -81,7 +59,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="updateRemission()" ng-disabled="!updateRemissionForm.$valid">Actualizar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="updateRemission(remission)" ng-disabled="!updateRemissionForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
