cambios en reporte diario

--- a/app/views/report/dailyABEL.html
+++ b/app/views/report/dailyABEL.html
@@ -42,9 +42,10 @@
                         <th>Variedad</th>
                         <th>Chica</th>
                         <th>Mediana</th>
-                        <th>Total</th>
+                        <th>Grande</th>
+                        <th>Total Primera</th>
                         <th>% Calidad</th>
-                        <th>Germinada</th>
+                        <th>Total Segunda</th>
                     </tr>
                 </thead>
                 <tbody>
