--- a/app/views/field.html
+++ b/app/views/field.html
@@ -1,100 +1,153 @@
 <div class="animated bounceInRight">
-    <div class="card">
-        <form name="fieldForm" class="form-horizontal" role="form" novalidate>
-            <div class="card-header">
-                <h2>Alta de Campos</h2>
-            </div>
-            <div class="card-body card-padding">
-                <div class="form-group">
-                    <label for="field" class="col-sm-2 control-label">Campo *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="100" ng-minlength="3"
-                                placeholder="nombre del campo" data-ng-model="field.FieldName">
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.minlength">El nombre del campo debe contener al menos 3 caracteres.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.maxlength">El nombre del campo es demasiado extenso, debe contener menos de 100 caracteres.</small>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Alta de Campos</h2>
                 </div>
-                <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required type="text" name="Batch" class="form-control input-sm" id="batch" ng-maxlength="150" ng-minlength="3" placeholder="huerta / lote"
-                                data-ng-model="field.Batch">
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.Batch.$error.minlength">El nombre del lote debe contener al menos 3 caracteres.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.Batch.$error.maxlength">El nombre del lote es demasiado extenso, debe contener menos de 150 caracteres.</small>
+                <div class="card-body card-padding">
+                    <form name="fieldForm" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="field" class="col-sm-2 control-label">Campo *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line">
+                                    <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="100" ng-minlength="3"
+                                        placeholder="nombre del campo" data-ng-model="fieldName">
+                                    <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.minlength">El nombre del campo debe contener al menos 3 caracteres.</small>
+                                    <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.maxlength">El nombre del campo es demasiado extenso, debe contener menos de 100 caracteres.</small>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Cuadro *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required type="text" name="Box" class="form-control input-sm" id="batch" ng-maxlength="20" ng-minlength="1" placeholder="cuadro"
-                                data-ng-model="field.Box">
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.Box.$error.minlength">El nombre del cuadro debe contener al menos 1 caracteres.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.Box.$error.maxlength">El nombre del cuadro es demasiado extenso, debe contener menos de 20 caracteres.</small>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveField(fieldName)" ng-disabled="!fieldForm.$valid">Guardar</button>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Hectareas *</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input required name="hectares" type="number" min="1" class="form-control input-sm" id="iusername" placeholder="hectareas"
-                                data-ng-model="field.Hectares">
-                            <small class="help-block has-error" style="color:red" ng-show="fieldForm.hectares.$error.number">Numero no valido.</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveField(field)" ng-disabled="!fieldForm.$valid">Guardar</button>
-                    </div>
+                    </form>
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="card">
-        <div class="card-header">
-            <h2>Campos</h2>
         </div>
-        <div class="card-body table-responsive">
-            <div class="col-sm-12 actionbar">
-                <div class="form-group">
-                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                    <div class="col-sm-12">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Alta de Huertas/Lotes</h2>
+                </div>
+                <div class="card-body card-padding">
+                    <form name="batchForm" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="fieldF" class="col-sm-2 control-label">Campo *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line select">
+                                    <select id="fieldF" class="form-control" ng-model="batch.Field" ng-options="batch.FieldName for batch in fields"></select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="batchName" class="col-sm-2 control-label">Huerta/Lote *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line">
+                                    <input required type="text" name="Batch" class="form-control input-sm" id="batchName" ng-maxlength="150" ng-minlength="3"
+                                        placeholder="huerta / lote" data-ng-model="batch.Batch">
+                                    <small class="help-block has-error" style="color:red" ng-show="batchForm.Batch.$error.minlength">El nombre del lote debe contener al menos 3 caracteres.</small>
+                                    <small class="help-block has-error" style="color:red" ng-show="batchForm.Batch.$error.maxlength">El nombre del lote es demasiado extenso, debe contener menos de 150 caracteres.</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="hectaresNum" class="col-sm-2 control-label">Hectareas *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line">
+                                    <input required name="hectares" type="number" min="1" class="form-control input-sm" id="hectaresNum" placeholder="hectareas"
+                                        data-ng-model="batch.Hectares">
+                                    <small class="help-block has-error" style="color:red" ng-show="batchForm.hectares.$error.number">Numero no valido.</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBatch(batch)" ng-disabled="!batchForm.$valid">Guardar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Alta de Cuadros</h2>
+                </div>
+                <div class="card-body card-padding">
+                    <form name="boxForm" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="batchD" class="col-sm-2 control-label">Huerta/Lote *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line select">
+                                    <select id="batchD" class="form-control" ng-model="box.Batch" ng-options="box.Batch for box in batches"></select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="field" class="col-sm-2 control-label">Cuadro *</label>
+                            <div class="col-sm-10">
+                                <div class="fg-line">
+                                    <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="20"
+                                        placeholder="nombre del campo" data-ng-model="box.Box">
+                                    <small class="help-block has-error" style="color:red" ng-show="boxForm.fieldName.$error.maxlength">El nombre del campo es demasiado extenso, debe contener menos de 20 caracteres.</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBox(box)" ng-disabled="!boxForm.$valid">Guardar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="card-header">
+                <h2>Campos</h2>
+            </div>
+            <div class="card-body table-responsive">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
+                            <div class="fg-line">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <table class="table table-striped table-vmiddle">
-                <thead>
-                    <tr>
-                        <th>Campo</th>
-                        <th>Huerta/Lote</th>
-                        <th>Cuadro</th>
-                        <th>Hectareas</th>
-                        <th>Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="field in fields | filter:searchField">
-                        <td>{{field.FieldName}}</td>
-                        <td>{{field.Batch}}</td>
-                        <td>{{field.Box}}</td>
-                        <td>{{field.Hectares}}</td>
-                        <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id)">
+                <table class="table table-striped table-vmiddle">
+                    <thead>
+                        <tr>
+                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
+                            <th>Cuadro</th>
+                            <th>Hectareas</th>
+                            <th>Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="field in fieldsAndBatches | filter:searchField">
+                            <td>{{field.FieldName}}</td>
+                            <td>{{field.Batch}}</td>
+                            <td>{{field.Box}}</td>
+                            <td>{{field.Hectares}}</td>
+                            <td>
+                                <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id)">
                         <span class="md md-delete"></span>
                     </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
