--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -13,27 +13,15 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="row">
-                    <div class="col-sm-4">
-                        <p class="c-black f-500 m-b-20">Basic Example</p>
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><i class="md md-event"></i></span>
-                            <div class="dtp-container dropdown fg-line">
-                                <input type='text' class="form-control date-time-picker" data-toggle="dropdown" placeholder="Click here...">
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="form-group">
-                    <label for="date" class="col-sm-2 control-label">Fecha *</label>
+                    <label for="EntryDate" class="col-sm-2 control-label">Fecha *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" disabled class="form-control input-sm" id="grillDate" placeholder="fecha de captura" value="{{ data.dateDropDownInput | date:'dd-MM-yyyy HH:mm a' }}">
+                            <input type="text" required disabled class="form-control input-sm" id="EntryDate" placeholder="fecha de captura" value="{{ date | date: 'yyyy/MM/dd HH:mm' }}">
                             <div class="dropdown">
-                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-ng-model="data.dateDropDownInput" data-target
-                                    href><i class="md md-event"></i></a>
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <datetimepicker data-ng-model="data.dateDropDownInput" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                    <datetimepicker data-ng-model="date" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
                                 </ul>
                             </div>
                         </div>
