--- a/app/views/remission/remissionAdd.html
+++ b/app/views/remission/remissionAdd.html
@@ -28,7 +28,31 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="quantity" class="col-sm-2 control-label">Cantidad *</label>
+                    <label for="remissionFieldD" class="col-sm-2 control-label">Campo *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line select">
+                            <select id="remissionFieldD" class="form-control" ng-model="remission.Field" ng-options="remission.FieldName for remission in fields" ng-change="getBatchInCurrentField(remission.Field)"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="remissionBatchD" class="col-sm-2 control-label">Huerta/Lote *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line select">
+                            <select id="remissionBatchD" class="form-control" ng-model="remission.Batch" ng-options="remission.Batch for remission in batches" ng-change="getBoxesInCurrentBatch(remission.Batch)"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="remissionBoxD" class="col-sm-2 control-label">Cuadro *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line select">
+                            <select id="remissionBoxD" class="form-control" ng-model="remission.Box" ng-options="remission.Box for remission in boxes"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="quantity" class="col-sm-2 control-label">Cantidad en Kilos*</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input type="number" min="1" name="Quantity" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
