--- a/app/views/sampling/samplingAdd.html
+++ b/app/views/sampling/samplingAdd.html
@@ -6,14 +6,14 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="date" class="col-sm-2 control-label">Fecha *</label>
+                    <label for="EntryDate" class="col-sm-2 control-label">Fecha *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" required disabled class="form-control input-sm" id="samplingDate" placeholder="fecha de captura" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
+                            <input type="text" required disabled class="form-control input-sm" id="EntryDate" placeholder="fecha de captura" value="{{ date | date: 'yyyy/MM/dd HH:mm' }}">
                             <div class="dropdown">
-                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="large md md-event"></i></a>
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <datetimepicker ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                    <datetimepicker data-ng-model="date" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
                                 </ul>
                             </div>
                         </div>
