--- a/app/views/users.html
+++ b/app/views/users.html
@@ -27,8 +27,9 @@
                     <label for="ipassword" class="col-sm-2 control-label">Contraseña *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password" ng-minlength="8" required>
+                            <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password" ng-minlength="8" ng-pattern="^(?=.{8,20}$)(?=.*\d)(?=.*[a-zA-Z]).*$" required>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.pass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.pass.$error.pattern">La Contraseña debe contener una mayuscula, una minuscula y un caracter especial.</small>
                         </div>
                     </div>
                 </div>
