se agrego la captura de campos en remisiones se corrigieron bugs en forms se agregaron validaciones en general

--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -17,7 +17,7 @@
             <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
-                        <th>Id</th>
+                        <th>No. de Parilla</th>
                         <th>Fecha de Captura</th>
                         <th>Recepciones</th>
                         <th>Tamaño</th>
