--- a/app/views/field.html
+++ b/app/views/field.html
@@ -8,11 +8,10 @@
                 <div class="card-body card-padding">
                     <form name="fieldForm" class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="field" class="col-sm-2 control-label">Campo *</label>
                             <div class="col-sm-10">
                                 <div class="fg-line">
                                     <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="100" ng-minlength="3"
-                                        placeholder="nombre del campo" data-ng-model="fieldName">
+                                        placeholder="Nombre del campo *" data-ng-model="fieldName">
                                     <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.minlength">El nombre del campo debe contener al menos 3 caracteres.</small>
                                     <small class="help-block has-error" style="color:red" ng-show="fieldForm.fieldName.$error.maxlength">El nombre del campo es demasiado extenso, debe contener menos de 100 caracteres.</small>
                                 </div>
@@ -35,7 +34,7 @@
                 <div class="card-body card-padding">
                     <form name="batchForm" class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="fieldF" class="col-sm-2 control-label">Campo *</label>
+                            <p class="f-500 m-b-15 c-black">Campo *</p>
                             <div class="col-sm-10">
                                 <div class="fg-line select">
                                     <select id="fieldF" class="form-control" ng-model="batch.Field" ng-options="batch.FieldName for batch in fields"></select>
@@ -43,21 +42,19 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="batchName" class="col-sm-2 control-label">Huerta/Lote *</label>
                             <div class="col-sm-10">
                                 <div class="fg-line">
                                     <input required type="text" name="Batch" class="form-control input-sm" id="batchName" ng-maxlength="150" ng-minlength="3"
-                                        placeholder="huerta / lote" data-ng-model="batch.Batch">
+                                        placeholder="Huerta/Lote *" data-ng-model="batch.Batch">
                                     <small class="help-block has-error" style="color:red" ng-show="batchForm.Batch.$error.minlength">El nombre del lote debe contener al menos 3 caracteres.</small>
                                     <small class="help-block has-error" style="color:red" ng-show="batchForm.Batch.$error.maxlength">El nombre del lote es demasiado extenso, debe contener menos de 150 caracteres.</small>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="hectaresNum" class="col-sm-2 control-label">Hectareas *</label>
                             <div class="col-sm-10">
                                 <div class="fg-line">
-                                    <input required name="hectares" type="number" min="1" class="form-control input-sm" id="hectaresNum" placeholder="hectareas"
+                                    <input required name="hectares" type="number" min="1" class="form-control input-sm" id="hectaresNum" placeholder="Hectareas *"
                                         data-ng-model="batch.Hectares">
                                     <small class="help-block has-error" style="color:red" ng-show="batchForm.hectares.$error.number">Numero no valido.</small>
                                 </div>
@@ -80,7 +77,7 @@
                 <div class="card-body card-padding">
                     <form name="boxForm" class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="batchD" class="col-sm-2 control-label">Huerta/Lote *</label>
+                            <p class="f-500 m-b-15 c-black">Huerta/Lote *</p>
                             <div class="col-sm-10">
                                 <div class="fg-line select">
                                     <select id="batchD" class="form-control" ng-model="box.Batch" ng-options="box.Batch for box in batches"></select>
@@ -88,11 +85,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="field" class="col-sm-2 control-label">Cuadro *</label>
                             <div class="col-sm-10">
                                 <div class="fg-line">
-                                    <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="20"
-                                        placeholder="nombre del campo" data-ng-model="box.Box">
+                                    <input required type="text" name="fieldName" class="form-control input-sm" id="field" ng-maxlength="20" placeholder="Cuadro *"
+                                        data-ng-model="box.Box">
                                     <small class="help-block has-error" style="color:red" ng-show="boxForm.fieldName.$error.maxlength">El nombre del campo es demasiado extenso, debe contener menos de 20 caracteres.</small>
                                 </div>
                             </div>
@@ -107,47 +103,45 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="card">
-            <div class="card-header">
-                <h2>Campos</h2>
-            </div>
-            <div class="card-body table-responsive">
-                <div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
-                            </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Campos</h2>
+        </div>
+        <div class="card-body table-responsive">
+            <div class="col-sm-12 actionbar">
+                <div class="form-group">
+                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                    <div class="col-sm-12">
+                        <div class="fg-line">
+                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
                         </div>
                     </div>
                 </div>
-                <table class="table table-striped table-vmiddle">
-                    <thead>
-                        <tr>
-                            <th>Campo</th>
-                            <th>Huerta/Lote</th>
-                            <th>Cuadro</th>
-                            <th>Hectareas</th>
-                            <th>Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="field in fieldsAndBatches | filter:searchField">
-                            <td>{{field.FieldName}}</td>
-                            <td>{{field.Batch}}</td>
-                            <td>{{field.Box}}</td>
-                            <td>{{field.Hectares}}</td>
-                            <td>
-                                <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id)">
+            </div>
+            <table class="table table-striped table-vmiddle">
+                <thead>
+                    <tr>
+                        <th>Campo</th>
+                        <th>Huerta/Lote</th>
+                        <th>Cuadro</th>
+                        <th>Hectareas</th>
+                        <th>Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="field in fieldsAndBatches | filter:searchField">
+                        <td>{{field.FieldName}}</td>
+                        <td>{{field.Batch}}</td>
+                        <td>{{field.Box}}</td>
+                        <td>{{field.Hectares}}</td>
+                        <td>
+                            <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id)">
                         <span class="md md-delete"></span>
                     </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
