--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -47,11 +47,11 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="form-group fg-line">
-                                    <input type="text" disabled required class="form-control input-sm" id="grillIssueDate" placeholder="Fecha" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
+                                    <input type="text" required disabled class="form-control input-sm" id="EntryDate" placeholder="fecha de captura" value="{{ date | date: 'yyyy/MM/dd HH:mm' }}">
                                     <div class="dropdown">
                                         <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
                                         <ul class="dropdown-menu" role="menu">
-                                            <datetimepicker data-ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                            <datetimepicker data-ng-model="date" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
                                         </ul>
                                     </div>
                                 </div>
