--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -17,6 +17,7 @@
             <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
+                        <th>No. de Parrilla</th>
                         <th>Fecha</th>
                         <th>Peso</th>
                         <th>Porciento de Humedad</th>
@@ -28,6 +29,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="sampling in samplings | filter:searchGrillSampling">
+                        <td>{{sampling.GrillId}}</td>
                         <td>{{sampling.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{sampling.SampleWeight}}</td>
                         <td>{{sampling.HumidityPercent}}</td>
