--- a/app/views/userProfile.html
+++ b/app/views/userProfile.html
@@ -21,8 +21,8 @@
                         <div class="col-sm-10">
                             <div class="fg-line">
                                 <input name="pass" type="password" class="form-control input-sm" id="iapassword" placeholder="contraseña anterior" data-ng-model="changePass.OldPassword"
-                                    ng-minlength="8" required>
-                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.pass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
+                                    ng-pattern="passwordRegex" required>
+                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.pass.$error.pattern">La Contraseña debe contener al menos una mayuscula, una minuscula, un numero y ser mayor a 8 caracteres.</small>
                             </div>
                         </div>
                     </div>
@@ -31,8 +31,8 @@
                         <div class="col-sm-10">
                             <div class="fg-line">
                                 <input name="Oldpass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="changePass.NewPassword"
-                                    ng-minlength="8" required>
-                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.Oldpass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
+                                    ng-pattern="passwordRegex" required>
+                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.Oldpass.$error.pattern">La Contraseña debe contener al menos una mayuscula, una minuscula, un numero y ser mayor a 8 caracteres.</small>
                             </div>
                         </div>
                     </div>
@@ -41,10 +41,10 @@
                         <div class="col-sm-10">
                             <div class="fg-line">
                                 <input name="confirmPass" type="password" class="form-control input-sm" id="icpassword" placeholder="confirmar contraseña"
-                                    ng-model="changePass.ConfirmPassword" ng-minlength="8" confirm-password="changePass.NewPassword"
+                                    ng-model="changePass.ConfirmPassword" ng-pattern="passwordRegex" confirm-password="changePass.NewPassword"
                                     required>
                                 <small class="help-block has-error" style="color:red" ng-show="userProfileForm.confirmPass.$invalid && !userProfileForm.confirmPass.$pristine">Las Contraseñas no coinciden.</small>
-                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.confirmPass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
+                                <small class="help-block has-error" style="color:red" ng-show="userProfileForm.confirmPass.$error.pattern">La Contraseña debe contener al menos una mayuscula, una minuscula, un numero y ser mayor a 8 caracteres.</small>
                             </div>
                         </div>
                     </div>
